--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
         <dependency>
             <groupId>org.antlr</groupId>
-            <artifactId>antlr4-runtime</artifactId>
+            <artifactId>antlr4</artifactId>
             <version>${antlr4.version}</version>
         </dependency>
     </dependencies>
